Align Menu and Fix margin for places

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -77,6 +77,7 @@ a{
     border: 3px solid yellow;
     display: flex;
     flex-flow: column wrap;
+    align-items: center;
     
 }
 
@@ -121,8 +122,7 @@ a{
 .places{
     border: 3px solid red;
     width: 300px;
-    margin-top: 15px;
-    margin-right: 40px;
+    margin:15px 20px;
     background-color: black;
     opacity: 1;
 }
